--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,15 @@ name = "rockyou2024"
 path = "src/parse/lib.rs"
 
 [dependencies]
+aho-corasick = "1.1.3"
 anyhow = "1.0.86"
 bloomfilter = "1.0.14"
 clap = { version = "4.5.5", features = ["derive"] }
 env_logger = "0.11.5"
+fxhash = "0.2.1"
+kdam = { version = "0.5.2", features = ["rayon"] }
 log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
 memmap = "0.7.0"
 rayon = "1.10.0"
 reader = {"path"="./crates/reader"}
+unicode-normalization = "0.1.23"
