feat: Added `progress` as a feature; disabling it with `--no-default-features` will speed up the indexing times.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,8 @@ repos:
         name: cargo-clippy
         entry: bash -c 'cargo clippy --fix --allow-staged --all-targets --all-features -- -D warnings'
         language: system
+        fail_fast: true
+      - id: cargo-test
+        name: cargo-test
+        entry: bash -c 'cargo test --all'
+        language: system
