--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ bloomfilter = "1.0.14"
 clap = { version = "4.5.5", features = ["derive"] }
 env_logger = "0.11.5"
 fxhash = "0.2.1"
+hashbrown = "0.14.5"
 kdam = { version = "0.5.2", optional = true }
 log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
 memmap = "0.7.0"
