feat: Setting up Rust FFI for Go to call `indices_of`. The current plan is to put Aho-corasick on the Rust side, leaving Go to do the API and API alone.
feat: Basic case-sensitive, non-fuzzy search now working.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,5 +37,14 @@ repos:
         fail_fast: true
       - id: cargo-test
         name: cargo-test
-        entry: bash -c 'cargo test --all'
+        entry: bash -c 'cargo test --all --features=skip_index_write'
         language: system
+- repo: https://github.com/dnephin/pre-commit-golang
+  rev: v0.5.1
+  hooks:
+    - id: go-fmt
+    - id: go-vet
+    - id: golangci-lint
+    - id: go-unit-tests
+    - id: go-build
+    - id: go-mod-tidy
