--- a/.github/workflows/go-CI.yml
+++ b/.github/workflows/go-CI.yml
@@ -30,7 +30,7 @@ jobs:
       run: go mod verify
 
     - name: Build
-      run: go build -v ./...
+      run: make build
 
     - name: Run go vet
       run: go vet ./...
@@ -42,4 +42,4 @@ jobs:
       run: staticcheck ./...
 
     - name: Run tests
-      run: go test -race -vet=off ./...
+      run: go test -race -vet=off -ldflags="-r $GITHUB_WORKSPACE/lib" ./...
