--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,15 @@ name = "rockyou2024"
 path = "src/parse/lib.rs"
 
 [features]
-default = ["progress"]
+default = ["progress", "search"]
 progress = ["dep:kdam"]
+search = ["aho-corasick", "regex"]
+skip_index_write = []
+aho-corasick = ["dep:aho-corasick"]
+regex = ["dep:regex"]
 
 [dependencies]
-aho-corasick = "1.1.3"
+aho-corasick = { version = "1.1.3", optional = true }
 anyhow = "1.0.86"
 bloomfilter = "1.0.14"
 clap = { version = "4.5.5", features = ["derive"] }
@@ -28,4 +32,5 @@ log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
 memmap = "0.7.0"
 rayon = "1.10.0"
 reader = {"path"="./crates/reader"}
+regex = { version = "1.10.6", optional = true }
 unicode-normalization = "0.1.23"
