feat: New `SearchStyle` to handle fuzzy searching. feat: `FindLinesInIndexCollection` now available in Go.

--- a/.github/workflows/go-CI.yml
+++ b/.github/workflows/go-CI.yml
@@ -5,12 +5,14 @@ on:
     branches: [development, staging, main]
     paths:
       - 'src/host/**'
+      - 'lib/**'
       - 'go.mod'
       - 'main.go'
   pull_request:
     branches: [development, staging, main]
     paths:
       - 'src/host/**'
+      - 'lib/**'
       - 'go.mod'
       - 'main.go'
 
