--- a/crates/parse-ffi/Cargo.toml
+++ b/crates/parse-ffi/Cargo.toml
@@ -9,4 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 libc = "0.2.158"
 log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
-rockyou2024 = { version = "0.1.0", path = "../.." }
+rockyou2024 = { version = "0.1.0", path = "../..", features=["search"] }
