--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,13 @@ path = "src/parse/lib.rs"
 default = ["progress", "search"]
 progress = ["dep:kdam"]
 search = ["aho-corasick", "regex"]
+# This is only useful when the `IndexCollection` persists between searches,
+# which is not the case for FFI.
+search_lru = ["search", "lru"]
 skip_index_write = []
 aho-corasick = ["dep:aho-corasick"]
 regex = ["dep:regex"]
+lru = ["dep:lru"]
 
 [dependencies]
 aho-corasick = { version = "1.1.3", optional = true }
@@ -26,9 +30,10 @@ bloomfilter = "1.0.14"
 clap = { version = "4.5.5", features = ["derive"] }
 env_logger = "0.11.5"
 fxhash = "0.2.1"
-hashbrown = "0.14.5"
+hashbrown = { version = "0.14.5", features = ["rayon"] }
 kdam = { version = "0.5.2", optional = true }
 log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
+lru = { version = "0.12.4", optional = true }
 memmap = "0.7.0"
 rayon = "1.10.0"
 reader = {"path"="./crates/reader"}
